# ChangeLog for kde-base/korn
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/korn/ChangeLog,v 1.10 2005/05/25 21:23:09 danarmak Exp $

*korn-3.4.1 (25 May 2005)

  25 May 2005; Dan Armak <danarmak@gentoo.org> +korn-3.4.1.ebuild:
  Ebuilds for KDE 3.4.1. These are package.masked until 3.4.1 is actually
  released. You can't get the tarballs yet.

  27 Apr 2005; Markus Rothe <corsair@gentoo.org> korn-3.4.0.ebuild:
  Added ~ppc64 to KEYWORDS

  26 Mar 2005; Jason Wever <weeve@gentoo.org> korn-3.4.0.ebuild:
  Added ~sparc keyword.

  18 Mar 2005; Daniel Goller <morfic@gentoo.org> korn-3.4.0.ebuild:
  Added to ~ppc

  13 Mar 2005; Dan Armak <danarmak@gentoo.org> korn-3.4.0.ebuild:
  KDE 3.4.0 ebuilds. Note that the tarballs won't be officially released for a
  few more days.

*korn-3.4.0_rc1 (03 Mar 2005)

  03 Mar 2005; Marcus D. Hanwell <cryos@gentoo.org> korn-3.4.0_rc1.ebuild:
  Marked ~amd64, keywording KDE split ebuilds, bug 80944.

  27 Feb 2005; Dan Armak <danarmak@gentoo.org> :
  Ebuild for 3.4.0 RC1.

*korn-3.4.0_beta2 (05 Feb 2005)

  05 Feb 2005; Dan Armak <danarmak@gentoo.org> +korn-3.4.0_beta2.ebuild:
  Ebuild for 3.4.0_beta2. Note that beta2 has NOT been released as of this
  date. This ebuild is for inside testing by the KDE team, and is of course
  package.masked.

  16 Jan 2005; Simone Gotti <motaboy@gentoo.org> korn-3.4.0_beta1.ebuild:
  Fix bug #78208.

*korn-3.4.0_beta1 (15 Jan 2005)

  15 Jan 2005; Dan Armak <danarmak@gentoo.org> +metadata.xml,
  +korn-3.4.0_beta1.ebuild:
  Adding the split ebuilds to portage. For KDE 3.4, we've created separate
  ebuilds for all the KDE apps.
