@@ -1,6 +1,6 @@
+MD5 486c0407f5739bb9f9bbf0316e398d7d korn-3.4.0.ebuild 778
+MD5 cfc6588c63540348743bc3c8480bc688 korn-3.4.1.ebuild 778
+MD5 8a9ff45add09a583de3968b109db1c2f ChangeLog 1808
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
-MD5 249fab38c5e712a69becb2461563f9b5 korn-3.4.0.ebuild 734
-MD5 63ee014240e4201b9997ea4bf4092954 ChangeLog 1688
-MD5 8e2c5b58d48c4e3cab131031b1da0cd1 korn-3.4.1.ebuild 735
 MD5 8c0ffea7b75b42449f4acada755ff36a files/digest-korn-3.4.0 67
 MD5 e8e3fc943d40a2fa3260a042e8f0dcf6 files/digest-korn-3.4.1 208
