@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/korn/korn-3.4.0.ebuild,v 1.4 2005/04/27 19:01:37 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/korn/korn-3.4.0.ebuild,v 1.5 2005/06/12 21:35:35 carlo Exp $
 
 KMNAME=kdepim
 MAXKDEVER=$PV
@@ -13,7 +13,8 @@ IUSE=""
 DEPEND="$(deprange $PV $MAXKDEVER kde-base/mimelib)
 $(deprange $PV $MAXKDEVER kde-base/libkmime)"
 OLDDEPEND="~kde-base/mimelib-$PV ~kde-base/libkmime-$PV"
-
+RDEPEND="${DEPEND}
+	kde-base/kdepim-kioslaves"
 KMCOPYLIB="libmimelib mimelib
 	libkmime libkmime"
 # libkcal is installed because a lot of headers are needed, but it don't have to be compiled
